--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 
 <body id="body">
     <div class="container">
-        <span>Josefina Stevenson</span>
+        <wrapper>
+            <span>Josefina Stevenson</span>
+        </wrapper>
         <div class="row g-5">
             <div class="col-xl-8 col-lg-6">
                 <div class="row">
@@ -113,9 +115,9 @@
                     discuss how we
                     can protect
                     your web assets and safeguard your customers' data.</p>
-                    <a href="contact.html">
-                <button type="button" class="btn" id="primary">Contact me</button>
-                    </a>
+                <a href="contact.html">
+                    <button type="button" class="btn" id="primary">Contact me</button>
+                </a>
 
             </div>
 
