--- a/contact.html
+++ b/contact.html
@@ -12,6 +12,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@200;400;500;600&display=swap"
 		rel="stylesheet">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico?">
 	<title>Contact me</title>
 </head>
 
